ntfy/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: ntfy
  name: ntfy
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: ntfy
status:
  loadBalancer: {}
