ntfy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: ntfy
  namespace: default
spec:
  rules:
  - host: ntfy.pazon.xyz
    http:
      paths:
      - backend:
          service:
            name: ntfy
            port:
              number: 80
        path: /
        pathType: Prefix
